<resources>
    <string name="app_name">AixCruise</string>

    <string name="start_button">Start</string>

    <string-array name="fragments_titles">
        <item>Home</item>
        <item>Settings</item>
        <item>My friends</item>
        <item>Friend:</item>
        <item>My trips</item>
        <item>Trip:</item>
        <item>My achievements</item>
        <item>About</item>
    </string-array>
    <string-array name="drawer_elements_titles">
        <item>Home</item>
        <item>Settings</item>
        <item>Friends</item>
        <item>Trips</item>
        <item>Achievements</item>
        <item>About</item>
    </string-array>
    <string-array name="drawer_elements_icon">
        <item>@mipmap/home</item>
        <item>@mipmap/home</item>
        <item>@mipmap/friends</item>
        <item>@mipmap/history</item>
        <item>@mipmap/achievements</item>
        <item>@mipmap/about</item>
    </string-array>
    <string-array name="map_data_type">
        <item>Speed</item>
        <item>Engine load</item>
        <item>Engine RPM</item>
        <item>Air temperature</item>
        <item>Fuel level</item>
        <item>Km per liter</item>
    </string-array>
    <string-array name="map_data_type_description">
        <item>Low speed is green</item>
        <item>Low load is green</item>
        <item>Low RPM is green</item>
        <item>No comments</item>
        <item>Fuel level change</item>
        <item>Lower consume is green</item>

    </string-array>
    <string-array name="grades">
        <item>terrible</item>
        <item>poor</item>
        <item>okay</item>
        <item>good</item>
        <item>perfect</item>
    </string-array>

    <string name="title_activity_history">Previous Cruises</string>
    <string name="drawer_open">Drawer open</string>
    <string name="drawer_close">Drawer close</string>
    <string name="drawler_active">Choose section</string>
    <string name="recent_achievements">Recent trips:</string>
    <string name="recent_trip">Recent trips:</string>
    <string name="dialog_loading_data">Loading data...</string>
    <string name="user_name">Name:</string>
    <string name="user_status">Status:</string>
    <string name="user_status_driver">Driver</string>
    <string name="tab_achievements">Achievements</string>
    <string name="tab_trips">Trips</string>
    <string name="choose_map_data">Display data:</string>
    <string name="trip_start_time">Date and time:</string>
    <string name="trip_distance">Distance:</string>
    <string name="trip_rel_grade">Relative grade:</string>
    <string name="about_credits_1">Alexander Devaykin</string>
    <string name="about_credits_2">Torsten Kohn</string>
    <string name="about_credits_3">Lukas Körfer</string>
    <string name="about_credits_4">Kevin Leonardic</string>
    <string name="about_footer">codeFEST8</string>
    <string name="about_header">AixCruise</string>
    <string name="trip_fuel_economy">Fuel consumed:</string>
</resources>
