<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:layout_marginLeft="@dimen/user_detail_text_margin"
        android:layout_marginRight="@dimen/user_detail_text_margin">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_header"
            android:textSize="50dp"
            android:gravity="center"
            android:layout_marginBottom="30dp"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_credits_1"
            android:textSize="35dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_credits_2"
            android:textSize="35dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_credits_3"
            android:textSize="35dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_credits_4"
            android:textSize="35dp"
            android:gravity="center"/>
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_footer"
            android:textSize="50dp"
            android:layout_marginTop="30dp"
            android:gravity="center"/>
        </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="10"
        android:layout_marginLeft="@dimen/user_detail_text_margin"
        android:layout_marginRight="@dimen/user_detail_text_margin" />


</RelativeLayout>
